--- a/src/pages/filters/filters.html
+++ b/src/pages/filters/filters.html
@@ -6,8 +6,8 @@
 <ion-content padding>
 <ion-list >
     <ion-item>
-        <ion-label color="adminPrimary" stacked>English name</ion-label>
-        <ion-input [(ngModel)]="engName" type="text" placeholder="filter by english name"></ion-input>
+        <ion-label color="adminPrimary" stacked>Surname</ion-label>
+        <ion-input [(ngModel)]="surname" type="text" placeholder="filter by english name"></ion-input>
     </ion-item>
     <ion-item>
         <ion-label color="adminPrimary" stacked>personal Id</ion-label>
