--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -3,7 +3,7 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name ="menu"></ion-icon>
       </button>
-      <ion-title> <span>Admin page</span></ion-title>
+      <ion-title> <span>Users list</span></ion-title>
       <ion-buttons end>
             <button ion-button icon-start (click)="changeLanguage()">
                 <ion-icon name="ios-globe-outline"></ion-icon>
